# matching-pennies

./: .gitignore  pyproject.toml
data/: README.md
experiments/: skeleton.toml
matching_pennies/: main.py
matching_pennies/analysis/: analysis.py  bambi_plots.py  ingest_experiment.py  sample_analysis.py  session_pca.py
matching_pennies/analysis/experiments/: 2018_acc_lesion.ipynb  hall_swap_plots.py  lesion_study_hallway_swap.ipynb  lesion_study_normal.ipynb  lesion_study_normal.py  lesion_study_paper_plots.py
matching_pennies/compute/: compute_performance_metrics.py
matching_pennies/io/: csv_parser.py  metrics_store.py
matching_pennies/utils/: log_odds_to_probability.py  plotting.py  preprocessing.py  search_cols.py
tests/: test_analysis.py  test_columns.py  test_sessions.py
