[project]
name = "matching-pennies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bambi>=0.16.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]
