[project]
name = "matching-pennies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "bambi>=0.16.0",
    "ipython>=9.6.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "patsy>=1.0.2",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "pymc>=5.26.1",
    "pytensor>=2.35.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.setuptools.packages.find]
include = ["matching_pennies*"]
exclude = ["data*", "experiments*"]
